# learnOs

./: .gitignore  README.md
homework/lab1/: showFile  showFile.rs
os/: Cargo.toml  Makefile  open.sh  watch.sh
os/.cargo/: config.toml
os/src/: batch.rs  config.rs  entry.asm  lang_items.rs  logging.rs  main.rs  stack_trace.rs
os/src/sync/: up.rs
os/src/syscall/: fs.rs  mod.rs  process.rs
os/src/trap/: context.rs  mod.rs  trap.S
user/: Cargo.toml
user/src/: console.rs  entry.asm  lib.rs
